objects/Classroom__c.object
<CustomObject>
    <fields>
        <fullName>Percentile__c</fullName>
        <label>Percentile</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Standard__c</fullName>
        <description>Name of the student</description>
        <label>Standard</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <inlineHelpText>Choose your subject</inlineHelpText>
        <label>Subject</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>EVS</fullName>
                </value>
                <value>
                    <fullName>History and civics</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>section__c</fullName>
        <label>section</label>
        <length>1</length>
        <type>Text</type>
    </fields>
</CustomObject>